# winservicetools

./: .gitignore  README.md  setup.cfg
examples/package/: setup.cfg
examples/package/examplesvc/: __init__.py  __main__.py  winservice.py
examples/script/: service_script.py
src/winservicetools/: __init__.py  cli.py  utils.py
