[metadata]
name = winservicetools
version = attr: winservicetools.__version__.__version__

[options]
packages = find:
install_requires =
    pywin32

[options.packages.find]
where=src
include=winservicetools

[options.entry_points]
console_scripts =
    winservicetools = winservicetools.cli:cli_main